# drivers-orogen-camera_prosilica

./: CMakeLists.txt  Doxyfile.in  SampleRunScript.rb  camera.orogen  camera_prosilica.orogen  manifest.xml  orocos_camera.orogen
scripts/: run.rb
tasks/: CMakeLists.txt  CameraRemoteInterface.h  CameraTask.cpp  CameraTask.hpp  CameraViewerTask.cpp  CameraViewerTask.hpp  CameraWorkerTask.cpp  CameraWorkerTask.hpp  Task.cpp  Task.hpp
