include(cameraTaskLib)
ADD_LIBRARY(${CAMERA_TASKLIB_NAME} SHARED 
    ${CAMERA_TASKLIB_SOURCES})

add_dependencies(${CAMERA_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${CAMERA_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CAMERA_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CAMERA_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CAMERA_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CAMERA_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CAMERA_TASKLIB_HEADERS}
    DESTINATION include/orocos/camera)

